Add Config Attri

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=3c245065-d0b7-40ea-9aef-a62737e5ec9f;IngestionEndpoint=https://centralindia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://centralindia.livediagnostics.monitor.azure.com/"
-  }
+  },
+  "Greeting": "Hello from Config"
 }
